# svm32

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
crates/bpf_loader/: Cargo.toml
crates/bpf_loader/benches/: serialization.rs
crates/bpf_loader/gen-syscall-list/: Cargo.toml  build.rs
crates/bpf_loader/src/: lib.rs  serialization.rs
crates/bpf_loader/src/syscalls/: cpi.rs  mem_ops.rs  mod.rs
crates/compute-budget/: Cargo.toml
crates/frozen-abi/: Cargo.toml
crates/frozen-abi/src/: abi_example.rs
crates/instruction/: Cargo.toml
crates/measure/: Cargo.toml
crates/measure/src/: macros.rs  measure.rs
crates/message/: Cargo.toml
crates/message/src/: compiled_keys.rs  legacy.rs  lib.rs  sanitized.rs
crates/message/src/versions/: mod.rs
crates/paytube/: Cargo.toml
crates/paytube-agave/: Cargo.toml
crates/paytube-agave/tests/: native_sol.rs
crates/paytube/src/: lib.rs  log.rs  processor.rs  settler.rs
crates/paytube/tests/: native_sol.rs  spl_tokens.rs
crates/program/: Cargo.toml
crates/program-runtime/: Cargo.toml
crates/program-runtime/src/: invoke_context.rs  lib.rs  loaded_programs.rs  sysvar_cache.rs
crates/programs/bpf_loader/: Cargo.toml
crates/runner-types/: Cargo.toml
crates/runner-types/src/: lib.rs
crates/sdk/: Cargo.toml
crates/sdk/benches/: accounts.rs  ed25519_instructions.rs  secp256k1_instructions.rs  serialize_instructions.rs  short_vec.rs  slot_hashes.rs  slot_history.rs
crates/sdk/src/: genesis_config.rs  transaction_context.rs
crates/secp256r1-program/: Cargo.toml
crates/secp256r1-program/src/: lib.rs
crates/signer/: Cargo.toml
crates/svm/: Cargo.toml
crates/svm-conformance/: Cargo.toml
crates/svm-rent-collector/: Cargo.toml
crates/svm-run/: Cargo.toml
crates/svm-run/tests/: conformance.rs  integration_test.rs
crates/svm-runner/: Cargo.toml
crates/svm-runner/src/: integration_test.rs  lib.rs  main.rs  mock_bank.rs
crates/svm-runner/src/data/: solana_sbf_rust_remaining_compute_units.rs
crates/svm-runner/tests/: integration_test.rs  mock_bank.rs
crates/svm-sprint/: Cargo.toml
crates/svm-sprint/tests/: conformance.rs
crates/svm-transaction/: Cargo.toml
crates/svm/src/: account_loader.rs  message_processor.rs  program_loader.rs  transaction_processor.rs
crates/svm/tests/: conformance.rs  integration_test.rs  mock_bank.rs
crates/system/: Cargo.toml
crates/system-interface/: Cargo.toml
crates/system/src/: system_instruction.rs  system_processor.rs
crates/transaction/: Cargo.toml
crates/transaction-error/: Cargo.toml
crates/transaction-error/src/: lib.rs
crates/transaction/src/: lib.rs  sanitized.rs
crates/transaction/src/versioned/: mod.rs
crates/vote/: Cargo.toml
crates/vote/benches/: process_vote.rs
crates/vote/src/: lib.rs  vote_processor.rs
crates/vote/src/vote_state/: mod.rs
onchain/: Anchor.toml  Cargo.toml  package.json
onchain/crates/instruction/src/: syscalls.rs
onchain/crates/runner-types/: Cargo.toml
onchain/crates/runner-types/src/: lib.rs
onchain/crates/transaction/: Cargo.toml
onchain/crates/verifier/: Cargo.toml
onchain/crates/verifier/src/: lib.rs  utils.rs
onchain/programs/zk-bridge/: Cargo.toml
onchain/programs/zk-bridge/src/: errors.rs  lib.rs  utils.rs
onchain/programs/zk-bridge/src/instructions/: add_ramp_tx.rs  create_platform.rs  mod.rs  prove.rs  withdraw.rs
onchain/programs/zk-bridge/src/state/: mod.rs  platform.rs  ramp.rs
onchain/tests/: zkBridge.ts
rollup/onchain/: Anchor.toml  Cargo.toml  keypairReceiver.json  keypairSender.json  package.json
rollup/onchain/programs/zk-bridge/: Cargo.toml
rollup/onchain/programs/zk-bridge/src/: errors.rs  lib.rs  utils.rs
rollup/onchain/programs/zk-bridge/src/instructions/: add_ramp_tx.rs  create_platform.rs  mod.rs  prove.rs  upload_proof.rs  withdraw.rs
rollup/onchain/programs/zk-bridge/src/state/: mod.rs  platform.rs  proof.rs  ramp.rs
rollup/onchain/programs/zk-bridge/tests/: test.rs
rollup/onchain/programs/zk-bridge/tests/idls/: zk_bridge.ts
rollup/onchain/tests/: utils.ts  zkBridge.ts
rollup/svm-runner/lib/: Cargo.toml
rollup/svm-runner/lib/src/: lib.rs  mock_bank.rs
rollup/svm-runner/lib/src/data/: mod.rs  solana_sbf_rust_128bit.rs  solana_sbf_rust_alloc.rs  solana_sbf_rust_alt_bn128.rs  solana_sbf_rust_alt_bn128_compression.rs  solana_sbf_rust_curve25519.rs  solana_sbf_rust_custom_heap.rs  solana_sbf_rust_iter.rs  solana_sbf_rust_many_args.rs  solana_sbf_rust_mem.rs  solana_sbf_rust_membuiltins.rs  solana_sbf_rust_noop.rs  solana_sbf_rust_param_passing.rs  solana_sbf_rust_poseidon.rs  solana_sbf_rust_rand.rs  solana_sbf_rust_remaining_compute_units.rs  solana_sbf_rust_sanity.rs  solana_sbf_rust_secp256k1_recover.rs  solana_sbf_rust_sha.rs
rollup/svm-runner/merkle-tree/: Cargo.toml
rollup/svm-runner/merkle-tree/src/: lib.rs
rollup/svm-runner/types/: Cargo.toml
rollup/svm-runner/types-anchor/: Cargo.toml
rollup/svm-runner/types-anchor/src/: lib.rs
rollup/svm-runner/types/src/: lib.rs
rollup/zk/borsh/: Cargo.toml
rollup/zk/borsh/src/: main.rs
rollup/zk/program/: Cargo.toml
rollup/zk/program/src/: main.rs
rollup/zk/script/: Cargo.toml  build.rs
rollup/zk/script/src/: main.rs
rollup/zk/verifier/: Cargo.toml
rollup/zk/verifier/src/: lib.rs  utils.rs
rollup/zk/verifier/tests/: test.rs
sp1/program/: Cargo.toml
sp1/program/src/: main.rs  mock_bank.rs
sp1/program/src copy/: main.rs
sp1/program/src/data/: mod.rs  solana_sbf_rust_alloc.rs  solana_sbf_rust_many_args.rs
sp1/script/: Cargo.toml
sp1/script/src/: chess.rs  main.rs
