[workspace]
members = ["crates/paytube", "crates/svm-sprint", "crates/bpf_loader"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
assert_matches = "1.5"
bincode = "1.3.3"
byteorder = "1.5.0"
ed25519-dalek = "=1.0.1"
lazy_static = "1.5"
libsecp256k1 = "0.7"
log = "0.4.22"
memoffset = "0.9"
openssl = "0.10"
prost = "=0.11.9"
qualifier_attr = { version = "0.2.2", default-features = false}
rand = "0.8.5"
rand0-7 = { package = "rand", version = "0.7" }
scopeguard = "1.2.0"
# shuttle = "0.8.0"
solana-bn254 = { version = "2" }
solana-bpf-loader-program = "2"
solana-clock = "2"
solana-compute-budget = { version = "2", features = [] }
solana-compute-budget-interface = "0.0.2"
solana-compute-budget-program = "2"
solana-client = "2"
solana-curve25519 = { version = "2" }
solana-epoch-schedule = "2"
solana-ed25519-program = "1.8.16"
solana-feature-set = "2"
solana-fee-calculator = "2"
solana-fee-structure = "0.0.2"
solana-frozen-abi = { version = "2", features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { version = "2", features = [
    "frozen-abi",
] }
solana-instruction = { version = "2", features = ["std"] }
solana-keypair = "0.0.2"
solana-loader-v4-program = { version = "2" }
solana-log-collector = "2"
solana-logger = "2"
solana-measure = { version = "2" }
solana-native-token = "2"
solana-poseidon = { version = "2" }
solana-program-memory = { version = "2" }
solana-program-runtime = {version = "2", features = []}
solana-pubkey = "2"
solana_rbpf = "=0.8.5"
solana-rent = "2"
solana-reserved-account-keys = "0.0.2"
# solana-sbpf = "0.10.0"
solana-sdk = { version = "2.1.13", features = ["dev-context-only-utils"] }
solana-secp256k1-program = "1.8.16"
solana-secp256r1-program = { version = "2", features = ["openssl-vendored"] }
solana-signature = "2"
solana-signer = "0.0.2"
solana-svm = { version = "2", features = ["dev-context-only-utils"] }
solana-svm-conformance = "2"
solana-svm-transaction = "2"
solana-system-program = "2"
# solana-system-transaction = "0.0.2"
solana-sysvar = "0.0.2"
solana-test-validator = "2"
solana-timings = "2"
# solana-transaction = "0.0.2"
solana-type-overrides = "2"
solana-vote = { version = "2" }
spl-token = "7"
spl-associated-token-account = "6"
subtle = "2.5" 
termcolor = "1.4"
test-case = "3"
thiserror = "1.0.68"