[workspace]
members = [
    "crates/bpf_loader",
    "crates/bpf_loader/gen-syscall-list",
    "crates/compute-budget",
    # "crates/paytube", 
    "crates/frozen-abi",
    "crates/program-runtime",
    "crates/measure",
    "crates/sdk",
    "crates/secp256r1-program",
    "crates/svm",
    "crates/system",
    "crates/vote",
    "rollup/onchain/programs/*",
    "rollup/svm-runner/*",
    "rollup/zk/*",
    "rollup/svm-runner/merkle-tree",
]
resolver = "2"

[workspace.package]
version = "2.1.13"
edition = "2021"

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-client = "0.30.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "=0.4.0"
assert_matches = "1.5"
base64 = "0.22.1"
bincode = "1.3.3"
borsh = {version = "1.5"}
bitflags = { version = "2.6.0" }
bs58 = { version = "0.5.1", default-features = false }
bv = "0.11.1"
bytemuck = "1.21.0"
byteorder = "1.5.0"
clap = "4.0"
crossbeam-channel = "0.5.14"
ed25519-dalek = "^1.0"
ecdsa = { version = "0.16", features = [] }
enum-iterator = "1.5.0"
env_logger = "0.9.3"
generic-array = { version = "0.14.7", default-features = false }
groth16-solana = { git = "https://github.com/Dodecahedr0x/groth16-solana" }
hex = "0.4.3"
hex-literal = "0.3.1"
im = "^15.1.0"
itertools = "^0.12.1"
jsonrpc-core = "^18.0.0"
jsonrpc-core-client = "^18.0.0"
jsonrpc-derive = "^18.0.0"
jsonrpc-http-server = "^18.0.0"
jsonrpc-ipc-server = "^18.0.0"
jsonrpc-pubsub = "^18.0.0"
k256 = "^0.13"
lazy_static = "1.5"
libc = "0.2.169"
libsecp256k1 = "*"
log = "0.4.22"
memmap2 = "0.5.10"
memoffset = "0.9"
num-bigint = "0.4.6"
num-derive = "0.4"
num-traits = "0.2"
openssl = "0.10"
p256 = { version = "0.13", features = ["ecdsa"] }
percentage = "0.1.0"
prost = "=0.11.9"
prost-build = "=0.11.9"
prost-types = "=0.11.9"
qualifier_attr = { version = "0.2.2", default-features = false }
rand = "=0.8.5"
regex = "1.11.1"
scopeguard = "1.2.0"
serde = "1.0.217"
serde_bytes = "0.11.15"
serde_derive = "1.0.217"
serde_json = "1.0.138"
serde_with = { version = "3.11.0", default-features = false }
sha2 = "0.10"
shuttle = "0.8.0"
solana-account = { version = "=2.1.13", features = ["bincode"]}
solana-account-decoder = { version = "=2.1.13" }
solana-bn254 = { version = "=2.1.13" }
solana-bpf-loader-program = { path = "crates/bpf_loader" }
solana-clock = "=2.1.13"
solana-compute-budget = { version = "=2.1.13", features = [] }
solana-compute-budget-interface = "0.0.2"
solana-compute-budget-program = { path = "crates/compute-budget" }
solana-client = "=2.1.13"
solana-curve25519 = { version = "^2.1.13" }
solana-epoch-rewards = "0.0.3"
solana-epoch-schedule = "=2.1.13"
solana-ed25519-program = "1.8.16"
solana-feature-set = "=2.1.13"
solana-fee = "=2.1.13"
solana-fee-calculator = "=2.1.13"
solana-fee-structure = "0.0.2"
solana-frozen-abi = { path = "crates/frozen-abi", features = ["frozen-abi"] }
solana-frozen-abi-macro = { version = "=2.1.13", features = ["frozen-abi"] }
solana-hash = { version = "=2.1.13", features = ["serde", "borsh"] }
solana-instruction = { version = "=0.0.3", features = ["std"] }
solana-keypair = "0.0.2"
solana-last-restart-slot = { version = "=2.1.13" }
solana-loader-v4-program = { version = "=2.1.13" }
solana-log-collector = "=2.1.13"
solana-logger = "=2.1.13"
solana-measure = { path = "crates/measure" }
solana-message = { version = "=0.0.3" }
solana-native-token = "=2.1.13"
solana-nonce = "=0.0.2"
solana-perf = { version = "=2.1.13" }
solana-precompile-error = { version = "=2.1.13" }
solana-poseidon = { version = "=2.1.13" }
solana-program = { version = "=2.1.13" }
solana-program-memory = { version = "=2.1.13" }
solana-program-runtime = { path = "crates/program-runtime" }
solana-precompiles = { version = "=0.0.2" }
solana-pubkey = {version = "=2.1.13", features = ["serde"]}
solana_rbpf = "=0.8.5"
solana-rent = "=2.1.13"
solana-reserved-account-keys = "0.0.2"
solana-rpc-client = "=2.1.13"
solana-rpc-client-api = "=2.1.13"
solana-runtime-transaction = "=2.1.13"
solana-sdk = { path = "crates/sdk", features = ["dev-context-only-utils"] } 
solana-sdk-ids = { version = "=0.0.3" }
solana-secp256k1-program = "1.8.16"
solana-secp256r1-program = { path = "crates/secp256r1-program" }
solana-sha256-hasher = {version = "=2.1.13", features = ["sha2"]}
solana-slot-hashes = { version = "=2.1.13" }
solana-signature = "=2.1.13"
solana-signer = "0.0.2"
solana-stable-layout = { version = "=2.1.13" }
solana-svm = { path = "crates/svm" }
solana-svm-conformance = { version = "=2.1.13" }
solana-svm-rent-collector = { version = "=2.1.13" }
solana-svm-transaction = { version = "=2.1.13" }
solana-system-interface = {version = "=1.0.0", features = ["std", "bincode"]}
solana-system-program = { path = "crates/system" }
solana-sysvar-id = { version = "=2.1.13" }
solana-sysvar = "0.0.2"
solana-test-validator = "=2.1.13"
solana-timings = "2.1.13"
solana-transaction = { path = "crates/transaction", features = ["bincode"]}
solana-transaction-context = { version = "0.0.2" }
solana-transaction-status = { version = "=2.1.13" }
solana-type-overrides = "=2.1.13"
solana-version = { version = "=2.1.13" }
solana-vote = { version = "=2.1.13" }
solana-vote-program = { path = "crates/vote" }
spl-associated-token-account = "6"
spl-token = "7"
spl-token-2022 = "7"
static_assertions = "1.1.0"
subtle = "2.5"
svm-runner = { path = "rollup/svm-runner/lib" }
svm-runner-types = { path = "rollup/svm-runner/types", features = []}
# svm-runner-types-anchor = { path = "rollup/svm-runner/types-anchor" }
termcolor = "1.4"
test-case = "3"
thiserror = "1.0.68"
tokio = "1.43.0"
tokio-serde = "0.8"
tokio-stream = "0.1.17"
tokio-tungstenite = "0.20.1"
tokio-util = "0.7.13"
sp1-core-machine = "=4.0.0"
sp1-core-machine-sys = "=4.0.0"
sp1-zkvm = "4.1.1"
sp1-sdk = "4.1.1"
sp1-build = "4.1.1"
verifier = { path = "rollup/zk/verifier" }
merkle-tree = { path = "rollup/svm-runner/merkle-tree"}


[patch.crates-io]
anchor-lang = { git = "https://github.com/Dodecahedr0x/anchor" }
anchor-spl = { git = "https://github.com/Dodecahedr0x/anchor" }
anchor-client = { git = "https://github.com/Dodecahedr0x/anchor" }
getrandom = { git = "https://github.com/thewuhxyz/getrandom", branch = "0.1-zkvm" }
# getrandom = { git = "https://github.com/nitro-svm/getrandom", branch = "0.1-zkvm" }
# solana_rbpf = {git = "https://github.com/thewuhxyz/rbpf"}
solana-bpf-loader-program = { path = "crates/bpf_loader" }
solana-compute-budget-program = { path = "crates/compute-budget" }
solana-frozen-abi = { path = "crates/frozen-abi" }
solana-measure = { path = "crates/measure" }
solana-program-runtime = { path = "crates/program-runtime" }
solana-sdk = { path = "crates/sdk" }
solana-secp256r1-program = { path = "crates/secp256r1-program" }
solana-svm = { path = "crates/svm" }
solana-system-program = { path = "crates/system" }
solana-vote-program = { path = "crates/vote" }
# solana-transaction = { path = "crates/transaction" }
# solana-instruction = { path = "crates/instruction" }
# solana-message = { path = "crates/message" }
# solana-signer = { path = "crates/signer" }
# solana-system-interface = { path = "crates/system-interface" }
# solana-transaction-error = { path = "crates/transaction-error" }

