[workspace]
members = ["programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"

[patch.crates-io]
getrandom = { git = "https://github.com/nitro-svm/getrandom", branch = "0.1-zkvm" }
# # solana_rbpf = {git = "https://github.com/thewuhxyz/rbpf"}
# solana-bpf-loader-program = { path = "../crates/bpf_loader" }
# solana-compute-budget-program = { path = "../crates/compute-budget" }
# solana-frozen-abi = { path = "../crates/frozen-abi" }
# solana-measure = { path = "../crates/measure" }
# solana-program-runtime = { path = "../crates/program-runtime" }
# solana-sdk = { path = "../crates/sdk" }
# solana-secp256r1-program = { path = "../crates/secp256r1-program" }
# solana-svm = { path = "../crates/svm" }
# solana-system-program = { path = "../crates/system" }
# solana-vote-program = { path = "../crates/vote" }
