[workspace]
members = ["crates/verifier", "programs/*"]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
ark-bn254 = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-serialize = "=0.4.0"
groth16-solana = { git = "https://github.com/Dodecahedr0x/groth16-solana" }
hex = "0.4.3"
hex-literal = "0.3.1"
num-bigint = "0.4.6"
num-traits = { version = "0.2.19" }
sha2 = "0.10.8"
sp1-sdk = "=4.0.0"
sp1-zkvm = "=4.0.0"
sp1-core-machine = "=4.0.0"
sp1-core-machine-sys = "=4.0.0"
thiserror = "1.0.63"
verifier = { path = "crates/verifier" }

[patch.crates-io]
getrandom = { git = "https://github.com/nitro-svm/getrandom", branch = "0.1-zkvm" }
anchor-lang = { git = "https://github.com/Dodecahedr0x/anchor", branch = "v0.30.1-program.v2" }
