[package]
name = "paytube-agave"
description = "Reference example using Solana SVM API"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-bpf-loader-program = "2"
solana-client = "2"
solana-compute-budget = "2"
solana-logger = "2"
solana-program-runtime = "2"
solana-sdk = "2"
solana-svm = "2"
solana-system-program = "2"
spl-associated-token-account = "6"
spl-token = "7"
termcolor = "1.4"

[dev-dependencies]
solana-test-validator = "2"

# [features]
# dummy-for-ci-check = []
# frozen-abi = []
