[package]
name = "svm-sprint"
version = "0.1.0"
edition = "2021"

[features]
dev-context-only-utils = ["dep:qualifier_attr"]
frozen-abi = [
    "dep:solana-frozen-abi",
    "dep:solana-frozen-abi-macro",
    "solana-compute-budget/frozen-abi",
    "solana-program-runtime/frozen-abi",
    "solana-sdk/frozen-abi",
]
# shuttle-test = [
#     "solana-type-overrides/shuttle-test",
#     "solana-program-runtime/shuttle-test",
#     "solana-bpf-loader-program/shuttle-test",
#     "solana-loader-v4-program/shuttle-test",
# ]

[dependencies]
qualifier_attr = { workspace = true, default-features = false, optional = true}
solana-frozen-abi = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-frozen-abi-macro = { workspace = true, optional = true, features = [
    "frozen-abi",
] }
solana-loader-v4-program = { workspace = true, optional = true }
# solana-svm = "2"

[dev-dependencies]
assert_matches = { workspace = true }
bincode = { workspace = true }
ed25519-dalek = { workspace = true }
lazy_static = { workspace = true }
libsecp256k1 = { workspace = true }
openssl = { workspace = true }
prost = { workspace = true }
# prost-types = "=0.11.9"
rand0-7 = { workspace = true }
# shuttle = "0.8.0"
solana-bpf-loader-program = { workspace = true }
solana-clock = { workspace = true }
solana-compute-budget = { workspace = true, features = [] }
solana-compute-budget-interface = { workspace = true }
solana-compute-budget-program = { workspace = true }
solana-ed25519-program = { workspace = true }
solana-epoch-schedule = { workspace = true }
solana-feature-set = { workspace = true }
solana-fee-calculator = { workspace = true }
solana-fee-structure = { workspace = true }
solana-instruction = { workspace = true, features = ["std"] }
solana-keypair = { workspace = true }
solana-log-collector = { workspace = true }
solana-logger = { workspace = true }
solana-native-token = { workspace = true }
solana-program-runtime = {version = "2", features = []}
solana-pubkey = { workspace = true }
solana-rent = { workspace = true }
solana-reserved-account-keys = { workspace = true }
solana-sdk = { workspace = true, features = ["dev-context-only-utils"] }
solana-secp256k1-program = { workspace = true }
solana-secp256r1-program = { workspace = true, features = ["openssl-vendored"] }
solana-signature = { workspace = true }
solana-signer = { workspace = true }
solana-svm = { workspace = true, features = ["dev-context-only-utils"] }
solana-svm-conformance = { workspace = true }
solana-svm-transaction = { workspace = true }
solana-system-program = { workspace = true }
solana-sysvar = { workspace = true }
solana-timings = { workspace = true }
solana-type-overrides = { workspace = true }
subtle = { workspace = true }
test-case = { workspace = true }