[workspace]
members = [
  "programs/*",
  # "clients/*"
]
resolver = "2"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

[workspace.dependencies]
anchor-lang = "0.30.1"
anchor-spl = "0.30.1"
anchor-client = "0.30.1"
bincode = "1.3.3"
borsh = {version = "1.5"}
bs58 = { version = "0.5.0"}
verifier = { path = "../zk/verifier" }
# svm-runner-types = { path = "../svm-runner/types" }

[patch.crates-io]
anchor-lang = { git = "https://github.com/Dodecahedr0x/anchor" }
anchor-spl = { git = "https://github.com/Dodecahedr0x/anchor" }
anchor-client = { git = "https://github.com/Dodecahedr0x/anchor" }
