[package]
version = "0.1.0"
name = "zk-svm"
edition = "2021"

[dependencies]
bincode = { workspace = true }
lazy_static = { workspace = true }
sp1-zkvm = { workspace = true }
solana_rbpf = { workspace = true }
solana-bpf-loader-program = { workspace = true }
solana-compute-budget = { workspace = true }
solana-feature-set = { workspace = true }
solana-measure = { workspace = true }
solana-program-runtime = { workspace = true }
solana-sdk = { workspace = true }
solana-svm = { workspace = true }
solana-system-program = { workspace = true }
solana-type-overrides = { workspace = true }
svm-runner = { workspace = true }
runner-types = { workspace = true }
