[package]
name = "svm-runner-types-anchor"
version = "0.1.0"
edition = "2021"

[dependencies]
bincode = { workspace = true }
borsh = {workspace = true}
generic-array = {workspace = true}
serde = { workspace = true, features = ["derive"] }
serde_bytes = { workspace = true }
# solana-sdk = { workspace = true }
solana-account = {workspace = true}
solana-program = { workspace = true, features = ["borsh"] }
solana-pubkey = {workspace = true}
solana-hash = {workspace = true}
solana-sha256-hasher = {workspace = true}
solana-transaction = { workspace = true, features = ["bincode"]}
