[package]
version = "0.1.0"
name = "zk-svm-borsh"
edition = "2021"

[dependencies]
bincode = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
solana-sdk = { workspace = true }
sp1-sdk = { workspace = true }
svm-runner = { workspace = true }
svm-runner-types = { workspace = true }
svm-runner-types-anchor = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
anyhow = "1"
borsh = {version = "1.5"}
# anchor-lang = {workspace = true}

[build-dependencies]
sp1-build = { workspace = true }
