[package]
name = "zk-bridge"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "zk_bridge"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []
solana = []

[dependencies]
anchor-lang = { workspace = true, features = ["init-if-needed"] }
anchor-spl = { workspace = true }
bincode = { workspace = true }
borsh = { workspace = true }
solana-bincode = {version = "=2.1.13"}
verifier = { workspace = true }
# svm-runner-types = { workspace = true }
svm-runner-types-anchor = { path = "../../../svm-runner/types-anchor" }
